--- a/index.html
+++ b/index.html
@@ -94,15 +94,18 @@ h2 {
 }
 
 .recently-released {
-  padding: 50px 16px
+  padding: 50px 16px;
+  font-size: 20px;
 }
 
 .upcoming-releases {
-  padding: 50px 16px
+  padding: 50px 16px;
+  font-size: 20px;
 }
 
 .spotlight {
-  padding: 50px 16px
+  padding: 50px 16px;
+  font-size: 20px;
 }
 
 * {
@@ -119,11 +122,36 @@ form.example input[type=text] {
 }
 
 .games li{
-  background: #eee;
+  /* background: #accbe1;
   color: #000;
   margin: 5;
-  padding: 5;
-display: block
+  padding: 5; */
+display: block;
+width: 18%;
+align-items: center;
+margin-left: auto;
+  margin-right: auto;
+  flex-wrap: wrap;
+
+}
+
+.games {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.name {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 15px;
+}
+
+.picture {
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+
 }
 
 
