Add search functionality

--- a/index.html
+++ b/index.html
@@ -136,8 +136,6 @@ form.example input[type=text] {
 .games {
   display: flex;
   flex-wrap: wrap;
-  
-
 }
 
 .name {
@@ -171,6 +169,21 @@ form.example input[type=text] {
   flex-wrap: wrap;
 }
 
+.searchbar {
+  padding-left: 1rem;
+  margin-left: 2rem;
+  margin-top: 5rem;
+}
+
+.searchResults {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.indsearch {
+  padding: 1rem;
+  width: 250px;
+}
 
 </style>
 
