--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
-  <head>
+<!DOCTYPE html>  
+
+<head>
     <title>My App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.js"></script> -->
 <style>
 
 
@@ -28,7 +29,7 @@
 
   .topnav {
   overflow: hidden;
-  background-color: #637081;
+  /* background-color: #637081; */
 }
 
 .topnav a {
@@ -79,6 +80,16 @@ h1 {
   text-transform: uppercase;
   font-size: 15px;
 }
+.user-details{
+  margin: auto;
+  text-align: center;
+}
+.avatar {
+  vertical-align: middle;
+  width: 250px;
+  height: 250px;
+  border-radius: 10%;
+}
 
 .footer-right {
   float: right;
@@ -89,17 +100,6 @@ h1 {
 
 h2 {
   padding: 14px 16px;
-  font-size: 20px;
-}
-
-.zeldaGames {
-  padding: 20px 16px;
-  font-size: 20px;
-
-}
-
-.mario-games{
-  padding: 20px 16px;
   font-size: 20px;
 }
 
@@ -122,7 +122,6 @@ form.example input[type=text] {
 }
 
 .games li{
-
   margin: 5;
   padding: 5;
   display: block;
@@ -131,13 +130,11 @@ form.example input[type=text] {
   margin-left: auto;
   margin-right: auto;
   flex-wrap: wrap;
-}
+} 
 
-.games {
+ .games {
   display: flex;
   flex-wrap: wrap;
-  
-
 }
 
 .name {
@@ -186,7 +183,56 @@ form.example input[type=text] {
   padding: 1rem;
   width: 250px;
 }
+#main-body{
+  padding-bottom: 60px;
+}
 
+/* Dropdown Button */
+/* .dropbtn { */
+  /* background-color: #04AA6D; */
+  /* color: white; */
+  /* padding: 16px; */
+  /* font-size: 16px;
+  border: none;
+} */
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  /* width: 20rem;
+  height: 75px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 10px;
+  /* width: 20rem;
+  height: auto;
+  top: 65px; */
+  /* text-decoration: none; */
+  display: block;
+
+}
+
+/* Change color of dropdown links on hover */ 
+.dropdown-content a:hover {background-color: #ddd;} 
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
 
 
 </style>
