--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>My App</title>
+    <link rel="stylesheet" href="/style.css" ></link>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -27,7 +28,7 @@
   background-color: #CEE5F2;
 }
 
-  .topnav {
+.topnav {
   overflow: hidden;
   background-color: #637081;
 }
@@ -65,7 +66,8 @@
 
 h1 {
   text-align: center;
-  padding-top: 7rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
 
 }
 
