--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@ form.example input[type=text] {
   padding-bottom: 60px;
 }
 
+.searchbar {
+  margin-left: 3rem;
+  margin-bottom: 10rem;
+  background-color:#CEE5F2;
+  border-radius:10px;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+}
+
 
 /* Dropdown Button */
 /* .dropbtn { */
