--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ h1 {
 
 .footer {
   position: fixed;
+  right:0;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -81,11 +82,14 @@ h1 {
   text-align: left;
   text-transform: uppercase;
   font-size: 15px;
+  z-index: 999;
 }
+
 .user-details{
   margin: auto;
   text-align: center;
 }
+
 .avatar {
   vertical-align: middle;
   width: 250px;
@@ -93,20 +97,15 @@ h1 {
   border-radius: 10%;
 }
 
-.footer-right {
+/* .footer-right {
   float: right;
   text-align: center;
   padding: 10px;
   font-size: 15px;
-}
+} */
 
 h2 {
   padding: 14px 16px;
-  font-size: 20px;
-}
-
-.games-from-1989 {
-  padding: 20px 16px;
   font-size: 20px;
 }
 
