--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 .topnav {
   overflow: hidden;
-  /* background-color: #637081; */
+  background-color: whitesmoke;
 }
 
 .topnav a {
@@ -45,12 +45,12 @@
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #accbe1;
+  color: #536b78;
 }
 
 .topnav a.active {
-  color: white;
+  color: #536b78;
 }
 
 .topnav-right {
@@ -77,7 +77,7 @@ h1 {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: white;
+  background-color: whitesmoke;
   color: white;
   text-align: left;
   text-transform: uppercase;
