Added mailer for password reset

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
   font-size: 12px;
   text-transform: uppercase;
 }
-
+.reset-password{
+  cursor: pointer
+}
 .topnav a:hover {
   background-color: #accbe1;
   padding: 14px 16px;
