--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <link href='https://css.gg/arrow-left.css' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"></script> -->
@@ -49,16 +50,25 @@
   border-radius: 10%;
 }
 
-h2 {
+h2{
   padding: 14px 16px;
   font-size: 20px;
   text-align: center;
   text-transform: uppercase;
-  font-weight: 900;
-  border-radius: 25px;
+  font-weight: bold;
   font-family:'Silkscreen', regular;
-  background: linear-gradient(to right, orange,blue, red, yellow);
+  color: white;
+  background: linear-gradient(to right,blue, red);
+  border-radius: 2rem; 
+ 
+  opacity: 0.5; 
 }
+
+/* h2.h2 {
+  color: white;
+  font-family:'Silkscreen', regular;
+border: 2px
+} */
 
 * {
   box-sizing: border-box;
@@ -118,6 +128,8 @@ form.example input[type=text] {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  font-family:'Silkscreen', regular;
+
 }
 
 .picture {
