--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
 
  body {
   font-family:'Silkscreen', regular;
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Black_colour.jpg/1200px-Black_colour.jpg'); 
   color: white;
+}
+
+.back{
+  background-color: black;
 }
 
 
@@ -52,28 +55,28 @@
 
 h2{
   padding: 14px 16px;
-  font-size: 20px;
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
   font-family:'Silkscreen', regular;
   color: white;
   background: linear-gradient(to right,blue, red);
-  border-radius: 2rem; 
  
-  opacity: 0.5; 
 }
 
-/* h2.h2 {
+h2.h2 {
   color: white;
   font-family:'Silkscreen', regular;
-border: 2px
-} */
-
-* {
-  box-sizing: border-box;
+  font-size: 20px;
+opacity: 0.8;
+border-radius: 2rem; 
 
 }
+
+/* * {
+  box-sizing: border-box;
+
+} */
 
 form.example input[type=text] {
   padding: 5px;
