--- a/index.html
+++ b/index.html
@@ -68,8 +68,18 @@ h2.h2 {
   color: white;
   font-family:'Silkscreen', regular;
   font-size: 20px;
-opacity: 0.8;
+/* opacity: 0.8; */
 border-radius: 2rem; 
+color: #fff;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #bc13fe,
+      0 0 82px #bc13fe,
+      0 0 92px #bc13fe,
+      0 0 102px #bc13fe,
+      0 0 151px #bc13fe;
 
 }
 
@@ -151,6 +161,9 @@ form.example input[type=text] {
   color: white
 }
 
+.sources {
+  color: black
+}
 
 </style>
 
