styled password reset

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
   background-color: black;
 }
 
+.reset-password-text{
+  font-size: 24px;
+  color: white;
+}
 
 .reset-password{
   cursor: pointer
