--- a/index.html
+++ b/index.html
@@ -165,9 +165,22 @@ form.example input[type=text] {
   color: white
 }
 
-.sources {
-  color: black
+.sources{
+  color: black;
+  font-family:'Silkscreen', regular;
+  position: relative;
+  top: 2px;
+background-color: white;
+    border: 1px solid white;
 }
+
+.sources:hover {
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+    outline-color: rgba(255, 255, 255, 0);
+    outline-offset: 15px;
+    text-shadow: 1px 1px 2px #427388; 
+}
+
 
 </style>
 
